--- a/superset/templates/superset/models/database/edit.html
+++ b/superset/templates/superset/models/database/edit.html
@@ -22,5 +22,6 @@
 {% block tail_js %}
   {{ super() }}
   {{ macros.testconn() }}
+  {{ macros.imported_edit() }}
   {{ macros.expand_extra_textarea() }}
 {% endblock %}
