Added automatic dashboard models and views
Missing:
- edit automatic dashboards (info not layout)
- process creation of automatic dashboards

--- a/superset/templates/appbuilder/navbar_right.html
+++ b/superset/templates/appbuilder/navbar_right.html
@@ -32,7 +32,8 @@
         <ul class="dropdown-menu">
             <li><a href="/superset/sqllab"><span class="fa fa-fw fa-search"></span> {{_("SQL Query")}}</a></li>
             <li><a href="/chart/add"><span class="fa fa-fw fa-bar-chart"></span> {{_("Chart")}}</a></li>
-            <li><a href="/dashboard/new/"><span class="fa fa-fw fa-dashboard"></span> {{_("Dashboard")}}</a></li>
+            <li><a href="/dashboard/new/"><span class="fa fa-fw fa-dashboard"></span> {{_("Manual Dashboard")}}</a></li>
+            <li><a href="/automaticdashboardview/form"><span class="fa fa-fw fa-dashboard"></span> {{_("Automatic Dashboard")}}</a></li>
         </ul>
     </li>
 {% endif %}
